# lyricedit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: LyricEdit.cc  LyricEdit.hh  LyricEdit_dialogs.cc  LyricEdit_music.cc  LyricEdit_ui.cc  LyricLine.cc  LyricLine.hh  MusicResource.cc  MusicResource.hh  Util.cc  Util.hh  lyricedit.cc  lyricedit.hh  lyricedit_dialogs.cc  lyricedit_ui.cc  main.cc
src/LRC/: LRC.cc  LRC.hh  LRCDeserializer.cc  LRCDeserializer.hh  LRCSerializer.cc  LRCSerializer.hh  LRC_Deserialize.cc  LRC_Serialize.cc
src/UI/: LyricEdit_EditWindow.cc  LyricEdit_FileWindow.cc  LyricEdit_LyricsWindow.cc  LyricEdit_SongControlsWindow.cc
tinyfd_cpp/: tinyfd_cpp.cc  tinyfd_cpp.hh
